k8s/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  labels:
    app: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
        - name: odoo
          image: odoo:latest 
          ports:
            - containerPort: 8069 
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  labels:
    app: odoo
spec:
  type: ClusterIP
  ports:
    - port: 8069
      targetPort: 8069
  selector:
    app: odoo
